# salon-archive

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  ecosystem.yaml  network-map.yaml  pyproject.toml  seed.yaml
.github/workflows/: ci.yml
data/: 2026-05-01-infrastructure-as-art.md  sample-session.md  sessions-index.json
docs/: seed-automation-contract.yaml  staging-reference.md
docs/pitch/: index.html
src/: __init__.py  __main__.py  config.py  data_export.py  export.py  repository.py  sessions.py  taxonomy.py  transcription.py
tests/: test_config.py  test_data_export.py  test_export.py  test_repository.py  test_sessions.py  test_taxonomy.py  test_transcription.py
