[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salon-archive"
version = "0.3.0"
description = "Transcription pipeline, taxonomy management, and session archival for community salons"
requires-python = ">=3.11"
dependencies = [
    "koinonia-db",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[project.scripts]
salon = "src.__main__:cli"
salon-data-export = "src.data_export:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 99
